--- a/WebContent/media/css/style.css
+++ b/WebContent/media/css/style.css
@@ -2154,6 +2154,12 @@ body#pageGallery article>section>figure>img {
 		width: 125px;
 		height: auto
 	}
+	
+	
+	body#pageHomepage>header>div nav#lang2 ul li>a {
+	color: rgba(250, 250, 250, 0.9);
+}
+	
 }
 
 @media only screen and (min-device-width:320px) and
@@ -2457,4 +2463,7 @@ body#pageGallery article>section>figure>img {
 		-moz-background-size: 320px 568px;
 		background-size: 320px 568px
 	}
+		body#pageHomepage>header>div nav#lang2 ul li>a {
+	color: rgba(250, 250, 250, 0.9);
+}
 	}
